# GomokuGame

./: Board.cpp  Board.h  CMakeLists.txt  Main.cpp  Main.h  pom.xml
src/main/java/: Board.h  Board.java  Main.h  Main.java  Settings.java
src/test/java/: GomokuTests.java
